--- a/document.html
+++ b/document.html
@@ -7,9 +7,9 @@
     <link type="text/css" rel="stylesheet" href="style_main.css" />
 
     <!-- figure out how to use require in the JS sometime - may need to reinstall command line tools -->
-    <script src="https://github.com/RobertWHurst/KeyboardJS/blob/master/dist/keyboard.min.js"></script>
+    <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="editor_bundle.js"></script>
+    <script src="editor.js"></script>
 </head>
 
 <body>
